--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </header>
     <div class="grid wide">
         <div class="main ">
-            <div class="row m-none">
+            <div class="row m-none j-space-between">
                 <div class=" job l-7">
                     <div class="job-title">
                         <p>Tuyển Gấp Lập Trình Game Unity 3D Lương Thoả Thuận</p>
