--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </header>
     <div class="grid wide">
         <div class="main ">
-            <div class="row m-none j-space-between">
+            <div class="row m-none .j-space-between">
                 <div class=" job l-7">
                     <div class="job-title">
                         <p>Tuyển Gấp Lập Trình Game Unity 3D Lương Thoả Thuận</p>
@@ -193,7 +193,7 @@
                                     Team của bạn có bao nhiêu thành viên?
                                 </div>
                                 <div class="input-price l-8">
-                                    <input type="number" id="team-number" onkeyup="onChange()">
+                                    <input type="number" id="team-number" onkeyup="onChange()" onchange="onChange()">
                                     <span class="add-on">Thành viên</span>
                                 </div>
                             </div>
